[gd_scene load_steps=7 format=4 uid="uid://ducqgxkgpyjwq"]

[ext_resource type="Script" uid="uid://bbrfhh684su7d" path="res://Player/GUI/Inventory/dungeon_map.gd" id="1_meijh"]
[ext_resource type="Texture2D" uid="uid://bbiqai1hq0o5m" path="res://Assets/SpriteSheets/NES - The Legend of Zelda - HUD & Pause Screen.png" id="2_css6h"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_h0avk"]
load_path = "res://.godot/imported/NES - The Legend of Zelda - HUD & Pause Screen.png-9bbbe5ff734a6f1af1a80f99f4bf1ecb.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_c3gdr"]
load_path = "res://.godot/imported/NES - The Legend of Zelda - HUD & Pause Screen.png-9bbbe5ff734a6f1af1a80f99f4bf1ecb.ctex"

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7age1"]
texture = ExtResource("2_css6h")
margins = Vector2i(6, 0)
separation = Vector2i(1, 1)
texture_region_size = Vector2i(8, 8)
57:12/0 = 0
58:12/0 = 0
59:12/0 = 0
60:12/0 = 0
61:12/0 = 0
62:12/0 = 0
63:12/0 = 0
64:12/0 = 0
65:12/0 = 0
66:12/0 = 0
67:12/0 = 0
68:12/0 = 0
69:12/0 = 0
70:12/0 = 0
71:12/0 = 0
72:12/0 = 0
65:11/0 = 0
59:14/0 = 0
67:14/0 = 0

[sub_resource type="TileSet" id="TileSet_8g1ja"]
tile_size = Vector2i(8, 8)
sources/0 = SubResource("TileSetAtlasSource_7age1")

[node name="EagleDungeon" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_meijh")

[node name="MapPickupSprite" type="Sprite2D" parent="."]
position = Vector2(52, 30)
texture = SubResource("CompressedTexture2D_h0avk")
region_enabled = true
region_rect = Rect2(601, 156, 8, 16)

[node name="CompassPickupSprite" type="Sprite2D" parent="."]
position = Vector2(51, 68)
texture = SubResource("CompressedTexture2D_c3gdr")
region_enabled = true
region_rect = Rect2(614, 158, 11, 12)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(128, 8)
tile_map_data = PackedByteArray("AAADAAcAAABGAAwAAAACAAcAAABBAAsAAAAEAAcAAABDAAwAAAADAAYAAABAAAwAAAADAAUAAABBAAsAAAAEAAUAAABGAAwAAAACAAUAAABBAAsAAAACAAQAAABBAAsAAAABAAQAAABBAAsAAAADAAQAAABBAAsAAAAEAAQAAABGAAwAAAAFAAQAAAA7AAwAAAAFAAMAAAA7AAwAAAAGAAMAAABBAAsAAAADAAMAAABBAAsAAAADAAIAAABBAAsAAAACAAIAAABBAAsAAAAAAAAAAABBAAsAAAAAAAEAAABBAAsAAAAAAAIAAABBAAsAAAAAAAMAAABBAAsAAAAAAAQAAABBAAsAAAAAAAUAAABBAAsAAAAAAAYAAABBAAsAAAAAAAcAAABBAAsAAAABAAUAAABBAAsAAAABAAYAAABBAAsAAAABAAcAAABBAAsAAAACAAYAAAA6AAwAAAAEAAYAAABIAAwAAAAFAAYAAAA7AAwAAAAGAAYAAABBAAsAAAAHAAYAAABBAAsAAAAFAAcAAABBAAsAAAAGAAcAAABBAAsAAAAHAAcAAABBAAsAAAAFAAUAAAA7AAwAAAAGAAUAAABBAAsAAAAHAAUAAABBAAsAAAAGAAQAAABBAAsAAAAHAAQAAABBAAsAAAAHAAAAAABBAAsAAAAHAAEAAABBAAsAAAAHAAIAAABBAAsAAAAHAAMAAABBAAsAAAAEAAAAAABBAAsAAAAEAAEAAAA/AAwAAAAEAAIAAABGAAwAAAAFAAAAAABBAAsAAAAFAAEAAAA9AAwAAAAFAAIAAABDAAwAAAAGAAAAAABBAAsAAAAGAAEAAABBAAsAAAAGAAIAAABBAAsAAAAEAAMAAABGAAwAAAABAAAAAABBAAsAAAABAAEAAABBAAsAAAACAAAAAABBAAsAAAACAAEAAABBAAsAAAADAAAAAABBAAsAAAADAAEAAAA6AAwAAAABAAIAAABBAAsAAAABAAMAAABBAAsAAAACAAMAAABBAAsAAAAIAAAAAABBAAsAAAAIAAEAAABBAAsAAAAIAAIAAABBAAsAAAAIAAMAAABBAAsAAAAIAAQAAABBAAsAAAAIAAUAAABBAAsAAAAIAAYAAABBAAsAAAAIAAcAAABBAAsAAAA=")
tile_set = SubResource("TileSet_8g1ja")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
position = Vector2(128, 8)
tile_map_data = PackedByteArray("AAADAAcAAABBAAsAAAACAAcAAABBAAsAAAAEAAcAAABBAAsAAAADAAYAAABBAAsAAAADAAUAAABBAAsAAAAEAAUAAABBAAsAAAACAAUAAABBAAsAAAACAAQAAABBAAsAAAABAAQAAABBAAsAAAADAAQAAABBAAsAAAAEAAQAAABBAAsAAAAFAAQAAABBAAsAAAAFAAMAAABBAAsAAAAGAAMAAABBAAsAAAADAAMAAABBAAsAAAADAAIAAABBAAsAAAACAAIAAABBAAsAAAAAAAAAAABBAAsAAAAAAAEAAABBAAsAAAAAAAIAAABBAAsAAAAAAAMAAABBAAsAAAAAAAQAAABBAAsAAAAAAAUAAABBAAsAAAAAAAYAAABBAAsAAAAAAAcAAABBAAsAAAABAAUAAABBAAsAAAABAAYAAABBAAsAAAABAAcAAABBAAsAAAACAAYAAABBAAsAAAAEAAYAAABBAAsAAAAFAAYAAABBAAsAAAAGAAYAAABBAAsAAAAHAAYAAABBAAsAAAAFAAcAAABBAAsAAAAGAAcAAABBAAsAAAAHAAcAAABBAAsAAAAFAAUAAABBAAsAAAAGAAUAAABBAAsAAAAHAAUAAABBAAsAAAAGAAQAAABBAAsAAAAHAAQAAABBAAsAAAAHAAAAAABBAAsAAAAHAAEAAABBAAsAAAAHAAIAAABBAAsAAAAHAAMAAABBAAsAAAAEAAAAAABBAAsAAAAEAAEAAABBAAsAAAAEAAIAAABBAAsAAAAFAAAAAABBAAsAAAAFAAEAAABBAAsAAAAFAAIAAABBAAsAAAAGAAAAAABBAAsAAAAGAAEAAABBAAsAAAAGAAIAAABBAAsAAAAEAAMAAABBAAsAAAABAAAAAABBAAsAAAABAAEAAABBAAsAAAACAAAAAABBAAsAAAACAAEAAABBAAsAAAADAAAAAABBAAsAAAADAAEAAABBAAsAAAABAAIAAABBAAsAAAABAAMAAABBAAsAAAACAAMAAABBAAsAAAAIAAAAAABBAAsAAAAIAAEAAABBAAsAAAAIAAIAAABBAAsAAAAIAAMAAABBAAsAAAAIAAQAAABBAAsAAAAIAAUAAABBAAsAAAAIAAYAAABBAAsAAAAIAAcAAABBAAsAAAA=")
tile_set = SubResource("TileSet_8g1ja")
